<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <include layout="@layout/layout_header"></include>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/layoutPanelContent"
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                        <SurfaceView
                            android:id="@+id/surfaceView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <ImageView
                            android:id="@+id/img"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone" />

                        <com.wx.project.drawingutil.widget.drawChartView.CaptureView
                            android:id="@+id/capture_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorWhite"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/layoutGraph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/layoutDot"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_selector"
                        android:gravity="center"
                        android:onClick="onClickListener"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/ic_dot" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/dot"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutLine"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_selector"
                        android:gravity="center"
                        android:onClick="onClickListener"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/line" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/line"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutRec"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_selector"
                        android:gravity="center"
                        android:onClick="onClickListener"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/rectangle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/rec"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutCircle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_selector"
                        android:gravity="center"
                        android:onClick="onClickListener"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/circle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/circle"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layoutZX"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_selector"
                        android:gravity="center"
                        android:onClick="onClickListener"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/zhexian" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/zx"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutDBX"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_selector"
                        android:gravity="center"
                        android:onClick="onClickListener"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/ic_dbx" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/dbx"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_selector"
                        android:gravity="center"
                        android:onClick="onClickListener"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/ic_del" />

                        <TextView
                            android:id="@+id/deleteStateTv"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/delete_single"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutDeleteAll"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/view_selector"
                        android:gravity="center"
                        android:onClick="onClickListener"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@mipmap/ic_picturedelete" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_marginTop="2dp"
                            android:gravity="center"
                            android:text="@string/delete_all"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>


                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>