<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteGray"
    android:orientation="vertical"
    tools:context="com.wx.project.drawingutil.activity.SettingColorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <include layout="@layout/layout_header"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGray"
            android:layout_weight="0"
            android:layout_height="0.5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/view_selector"
            android:gravity="center_vertical"
            android:onClick="onClickListener"
            android:paddingLeft="12dp"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/dot"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <LinearLayout
                    android:id="@+id/layoutDot"
                    android:layout_width="55dp"
                    android:onClick="onClickListener"
                    android:gravity="center"
                    android:layout_height="55dp">
                    <TextView
                        android:id="@+id/textDot"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@color/skyBlue"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGray"
            android:layout_weight="0"
            android:layout_height="0.5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/view_selector"
            android:gravity="center_vertical"
            android:onClick="onClickListener"
            android:paddingLeft="12dp"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <LinearLayout
                    android:id="@+id/layoutLine"
                    android:layout_width="55dp"
                    android:gravity="center"
                    android:onClick="onClickListener"
                    android:layout_height="55dp">
                    <TextView
                        android:id="@+id/textLine"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@color/stamp_text_red"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGray"
            android:layout_height="0.5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/view_selector"
            android:gravity="center_vertical"
            android:onClick="onClickListener"
            android:paddingLeft="12dp"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/circle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <LinearLayout
                    android:id="@+id/layoutCircle"
                    android:layout_width="55dp"
                    android:gravity="center"
                    android:onClick="onClickListener"
                    android:layout_height="55dp">
                    <TextView
                        android:id="@+id/textCircle"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@color/colorOrange"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGray"
            android:layout_height="0.5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/view_selector"
            android:gravity="center_vertical"
            android:onClick="onClickListener"
            android:paddingLeft="12dp"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/rec"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <LinearLayout
                    android:id="@+id/layoutRec"
                    android:layout_width="55dp"
                    android:gravity="center"
                    android:onClick="onClickListener"
                    android:layout_height="55dp">
                    <TextView
                        android:id="@+id/textRec"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@color/bg_green"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGray"
            android:layout_height="0.5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/view_selector"
            android:gravity="center_vertical"
            android:onClick="onClickListener"
            android:paddingLeft="12dp"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/dbx"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <LinearLayout
                    android:id="@+id/layoutDBX"
                    android:layout_width="55dp"
                    android:gravity="center"
                    android:onClick="onClickListener"
                    android:layout_height="55dp">
                    <TextView
                        android:id="@+id/textDBX"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@color/bg_green"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGray"
            android:layout_height="0.5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/view_selector"
            android:gravity="center_vertical"
            android:onClick="onClickListener"
            android:paddingLeft="12dp"
            android:layout_height="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/zx"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <LinearLayout
                    android:id="@+id/layoutZX"
                    android:layout_width="55dp"
                    android:gravity="center"
                    android:onClick="onClickListener"
                    android:layout_height="55dp">
                    <TextView
                        android:id="@+id/textZX"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@color/bg_green"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:background="@color/lightGray"
            android:layout_height="0.5dp" />
    </LinearLayout>
</LinearLayout>
